@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Ctrl+C/Ctrl+Insert to copy the current line if there is no selection.
+  Issue #304.
 * New editor setting: auto remove trailing spaces on saving. Issue #300.
 * New setting: HOME moves the cursor to position 0 or to the first non space
   character. Issue #302.
